# OracleOrdinals

./: .gitignore  Anchor.toml  README.md  ZKP.rs  oracle_service.py
programs/cross_chain_oracle/: Cargo.toml  client.js
programs/cross_chain_oracle/src/: lib.rs
recur/: Cargo.toml
runes/: keyn2CLY1tMtWWnGcxuAgf4Aa4RbRjh8DDyXYRU6NpG.json  metadata.json  nicVQjDPXmrRJCyzVSNn7rQpqCPHSqbrNfgX8rPNmsx.json  nicypGwyRwEsLRXDQcb5KJuFFwdsmGPi1vqxHiTZ2Ut.json
tests/: cross_chain_oracle.ts
